--- a/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
+++ b/app/src/main/res/layout/activity_vision_camerax_live_preview.xml
@@ -15,12 +15,19 @@
 
   <com.google.mlkit.vision.demo.GraphicOverlay
       android:id="@+id/graphic_overlay"
-      android:layout_width="0dp"
-      android:layout_height="0dp"
+      android:layout_width="match_parent"
+      android:layout_height="600dp"
       app:layout_constraintLeft_toLeftOf="@id/preview_view"
       app:layout_constraintRight_toRightOf="@id/preview_view"
-      app:layout_constraintTop_toTopOf="@id/preview_view"
-      app:layout_constraintBottom_toBottomOf="@id/preview_view"/>
+      app:layout_constraintTop_toTopOf="@id/preview_view" />
+
+      <!--Add button that captures video. Then, figure out how to use the python
+       script to process it for checkpoints-->
+  <Button
+      android:layout_width="match_parent"
+      android:layout_height="75dp"
+      app:layout_constraintTop_toBottomOf="@id/graphic_overlay"
+      android:text="RECORD REP"/>
 
   <include
       android:id="@+id/settings_button"
